---------------------------------------------------------------------------------------------------
Version: 1.1.0
Date: 9. 12. 2024
  Changes:
    - Recipe turning fulgorite shards into holmium powder can now be crafted in biochambers.
    - TODO more
---------------------------------------------------------------------------------------------------
Version: 1.0.0
Date: 8. 12. 2024
  Features:
    - Initial release.