@@ -1,12 +1,13 @@
 {
 	"name": "FulgoraLives",
-	"version": "1.0.0",
+	"version": "1.1.0",
 	"title": "Fulgora Lives",
 	"author": "StephenB",
 	"factorio_version": "2.0",
 	"dependencies":
 		[ "base >= 2.0"
 		, "space-age"
+		, "? any-planet-start"
 		, "? Rocs-Rusting-Iron"
 		, "? oceandump"
 		, "! battery-powered"
